added sidenav and create app-shell script

--- a/apps/app-shell/src/app/app.component.html
+++ b/apps/app-shell/src/app/app.component.html
@@ -1,7 +1,1 @@
-<ul class="remote-menu">
-  <li><a routerLink="/">Home</a></li>
-  <li><a routerLink="angular-mf">Angular App Repo</a></li>
-  <li><a routerLink="react-mf">React App Repo</a></li>
-  <li><a routerLink="next-mf">Next App Repo</a></li>
-</ul>
-<router-outlet></router-outlet>
+<aeries-app-navbar></aeries-app-navbar>
